# pg-doom

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: test_foo.py
